--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.example.android.teatime"
         minSdkVersion 16
@@ -20,17 +20,18 @@ android {
 }
 
 dependencies {
-    //TODO (9) Add espresso idling resource gradle dependency
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-annotations:25.1.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    // COMPLETED (9) Add espresso idling resource gradle dependency
+    implementation 'com.android.support:design:25.1.0'
+    implementation 'com.android.support:support-annotations:25.1.0'
+    implementation 'com.google.firebase:firebase-appindexing:10.0.0'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
 
     // Testing-only dependencies
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support:support-annotations:25.1.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    androidTestImplementation 'com.android.support.test:rules:0.5'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
 
 
 }
